# uhexen2

./: .gitattributes  .gitignore  MAKEFILE_CLEANUP_SUMMARY.txt  Makefile  RELEASE_NOTES_1.5.11.md  all_output.txt  build-release.sh  com.github.bobberb.uhexen2.json  flake.nix  readme.md  result
.beads/: issues.jsonl
common/: net_sys.h
engine/: CMakeLists.txt
engine/h2shared/: asm_nasm.inc  d_iface.h  draw.c  gl_draw.c  gl_fog.c  gl_func.h  gl_model.c  gl_model.h  gl_rlight.c  gl_screen.c  gl_sky.c  gl_texmgr.c  gl_vidsdl.c  glheader.h  glquake.h  h2config.h  img_load.c  mathlib.h  model.c  model.h  msg_io.c  pr_cmds.c  pr_edict.c  pr_exec.c  progs.h  quakefs.c  screen.c  snd_codec.c  snd_sdl.c  snd_sys.c  snd_sys.h  snd_timidity.c  snd_wildmidi.c  sv_model.h  sys.h  zone.c
engine/hexen2/: Makefile  cl_demo.c  cl_main.c  cl_parse.c  cl_tent.c  client.h  console.c  effects.h  gl_model.c  gl_rmain.c  gl_rmisc.c  host.c  host_cmd.c  keys.c  menu.c  net.h  pr_cmds.c  pr_edict.c  pr_exec.c  progdefs.h  protocol.h  quakedef.h  r_main.c  sbar.c  sv_main.c  sv_phys.c  sv_user.c  sys_unix.c  sys_win.c  world.c
engine/hexen2/server/: Makefile  host.c  host_cmd.c  sys_unix.c  sys_win.c
engine/hexenworld/client/: Makefile  cl_parse.c  cl_tent.c  client.h  gl_rmain.c  r_main.c
engine/hexenworld/server/: Makefile
engine/hexenworld/shared/: huffman.c  net_udp.c  quakedef.h
flatpak/: build.sh
hw_utils/hwmaster/: Makefile
hw_utils/hwmquery/: Makefile
hw_utils/hwrcon/: Makefile
libs/timidity/: Makefile
utils/bsp2map/: Makefile
utils/bspinfo/: Makefile
utils/dcc/: Makefile
utils/genmodel/: Makefile
utils/hcc/: Makefile
utils/jsh2color/: Makefile
utils/light/: Makefile
utils/pak/: Makefile
utils/qbsp/: Makefile
utils/qfiles/: Makefile
utils/texutils/bsp2wal/: Makefile
utils/texutils/lmp2pcx/: Makefile
utils/vis/: Makefile
